<resources>
    <string name="app_name">WashMe</string>
    <string name="app">WASH ME</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log_in">LOG IN</string>
    <string name="login_with_gmail">LOGIN WITH GMAIL</string>
    <string name="submit">SUBMIT</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="dont_have_an_account"><u>Dont have an Account</u></string>
    <string name="user_name">User Name</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="cont">CONTINUE</string>
    <string name="already_have_an_account"><u>Already have an Account</u></string>
    <string name="reset_password">RESET PASSWORD</string>
</resources>
