<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cars2"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="119dp"
        android:layout_height="74dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:src="@drawable/carlogo" />

    <TextView
        android:id="@+id/logo_name"
        style="@style/LogoName"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/chiller"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <Button
        android:id="@+id/signinbtn_login"
        style="@style/SignIN"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_round_corner"
        android:text="@string/sign_in"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:onClick="SignInActivityStart"
        />

    <Button
        android:id="@+id/loginbtn_login"
        style="@style/SignIN"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/signinbtn_login"
        android:background="@drawable/white_round_corner"
        android:text="@string/log_in"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="340dp"
        android:onClick="LoginActivityStart"
        />

    <Button
        style="@style/SignIN"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp"
        android:paddingLeft="7dp"
        android:background="@drawable/white_round_corner"
        android:drawableLeft="@drawable/google"
        android:text="@string/login_with_gmail" />

</RelativeLayout>